# WarClimate-Analytics

./: .gitignore  ARCHITECTURE.md  Makefile  OPERATIONS.md  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: backend-ci.yml  container-build.yml  deploy.yml  frontend-ci.yml  security.yml  (+1 more)
backend/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260417_0001_initial.py
backend/app/: cli.py  main.py
backend/app/api/: data_refresh.py  deps.py  router.py
backend/app/api/routes/: __init__.py  admin.py  analytics.py  health.py  losses.py  weather.py
backend/app/core/: config.py  logging.py  security.py  validation.py
backend/app/db/: bootstrap.py  session.py
backend/app/models/: __init__.py  analytics_cache.py  data_source.py  ingestion_run.py  losses_daily.py  weather_daily.py
backend/app/schemas/: admin.py  analytics.py  common.py  losses.py  weather.py
backend/app/services/: constants.py
backend/app/services/adapters/: base.py  factory.py  mod_losses.py  open_meteo_weather.py  sample_losses.py  sample_weather.py
backend/app/services/analytics/: service.py
backend/app/services/ingestion/: service.py
backend/sample_data/: losses_sample.json  weather_sample.json
backend/tests/: conftest.py  test_analytics.py  test_api.py  test_health.py  test_parsers.py
docs/: ARCHITECTURE.md  GITHUB_SETUP.md  OPERATIONS.md  SECURITY.md  TERRAFORM_BOOTSTRAP.md
flux/: gotk-sync.yaml
frontend/: Dockerfile  build.js  eslint.config.js  nginx.conf  package-lock.json  package.json
(+42 files in other folders)
