[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "war-climate-analytics"
version = "0.1.0"
description = "Demo analytics platform comparing official enemy losses data with historical weather."
readme = {text = "WarClimate_Analytics backend package.", content-type = "text/markdown"}
requires-python = ">=3.12"
dependencies = [
  "alembic==1.14.1",
  "beautifulsoup4==4.12.3",
  "fastapi==0.135.3",
  "httpx==0.28.1",
  "pandas==2.2.3",
  "prometheus-client==0.21.1",
  "prometheus-fastapi-instrumentator==7.0.2",
  "psycopg[binary]==3.2.6",
  "pydantic-settings==2.8.1",
  "python-json-logger==3.2.1",
  "sqlalchemy==2.0.38",
  "tenacity==9.0.0",
  "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
  "build==1.2.2.post1",
  "pytest==8.3.4",
  "pytest-asyncio==0.25.3",
  "ruff==0.9.7",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["B008", "E501", "UP017"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
asyncio_default_fixture_loop_scope = "function"
